--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,14 @@
 	<title>Home</title>
 	<body>
 		<h1>Home page</h1> 
-		<form action="/action_page.php">
-			<label for="parameters"> Scegli un parametro:</label>
-			<select id="parameters" name=="parameters" size="5">
-				
-				
-				<option value=console.log({{d}}> name </option>
-			
-		<p></p>
+		<script>
+			from string import Template
+			output="<form action=\"/action_page.php\"> <label for=\"parameters\"> Scegli un parametro:</label><select id=\"parameters\" name==\"parameters\" size=\"5\">"
+			for name in header:
+				output+=f"<option value=\"{name}\"> {name} </option>"
+			output=Template(html).safe_substitute()
+			print(output)
+		</script>
 	</body>
 </head>
 </html>
